--- a/config/config.env
+++ b/config/config.env
@@ -6,7 +6,7 @@ CLOUDINARY_CLIENT_API = 166165284571958
 
 CLOUDINARY_CLIENT_SECRET = luxq-wVPoQQIDldMpNatzso0I3c
 
-FRONTEND_URL: http://localhost:5173
+FRONTEND_URL: https://hirenet-frontend.vercel.app
 
 # MONGO_URI = mongodb://127.0.0.1:27017
 MONGO_URI = "mongodb+srv://paraspardhi98:D9t1BGXmVBKcWBmg@hirenet.ep67hmv.mongodb.net/"
