--- a/config/config.env
+++ b/config/config.env
@@ -9,7 +9,7 @@ CLOUDINARY_CLIENT_SECRET = luxq-wVPoQQIDldMpNatzso0I3c
 FRONTEND_URL: https://hirenet-frontend.vercel.app
 
 # MONGO_URI = mongodb://127.0.0.1:27017
-MONGO_URI = "mongodb+srv://paraspardhi98:D9t1BGXmVBKcWBmg@hirenet.ep67hmv.mongodb.net/"
+MONGO_URI = "mongodb+srv://paraspardhi98:D9t1BGXmVBKcWBmg@hirenet.ep67hmv.mongodb.net/MERN_JOB_SEEKING_WEBAPP?retryWrites=true&w=majority&appName=HireNet"
 
 JWT_SECRET_KEY = "mysecret.jsonweb.tokenkey"
 
