--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
